--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
     <!-- Bagian Footer -->
     <footer>
-      <p>Created with &#10084; by <a href="https://www.rezamufaris.com">Fahreza Mufaris</a></p>
+      <p>Created with &#10084; by <a href="https://www.mufarisfahreza.my.id">Fahreza Mufaris</a></p>
     </footer>
 
     <!-- Javascript -->
